--- a/index.html
+++ b/index.html
@@ -1,25 +1,36 @@
 <head>
 
   <meta
-    name="Custom pixel by UWCC"
-    content="Image filtering with Creative Coding and AI"
+    name="Ink Bleed by Wung Pan"
+    content="Image masking with code and AI"
   />
-  <meta name="description" content="Image filtering with Creative Coding and AI" />
-  <meta property="og:title" content="Custom pixel by UWCC" />
+  <meta name="description" content="Image masking with code and AI" />
+  <meta property="og:title" content="Ink Bleed by Wung Pan" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://23-2-dsdn242.github.io/mddn-242-data-mapping-panwung/"/>
   <meta property="og:image" content="https://23-2-dsdn242.github.io/mddn-242-data-mapping-panwung/preview.jpg" />
   <meta property="og:image:width" content="960" />
   <meta property="og:image:height" content="540" />
-  <meta property="og:description" content="Image filtering with Creative Coding and AI" />
+  <meta property="og:description" content="Image masking with code and AI" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:creator" content="@uwcc" />
-  <meta name="twitter:title" content="Custom pixel by UWCC" />
-  <meta name="twitter:description" content="Image filtering with Creative Coding and AI" />
+  <meta name="twitter:title" content="Ink Bleed by Wung Pan" />
+  <meta name="twitter:description" content="Image masking with code and AI" />
   <meta name="twitter:image" content="https://23-2-dsdn242.github.io/mddn-242-data-mapping-panwung/preview.jpg" />
 
+  <style>
+    body {
+      background-color:rgb(0, 0, 0);
+    }
+    th {
+      color:rgb(255, 255, 255);
+    }
+    a {
+      color:rgb(147, 128, 216);
+    }
+  </style>
 </head>
-<body style="background-color:white">
+<body>
     <table>
         <tr>
         <th>Training</th>
