updated html pages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <head>
-
   <meta
     name="Ink Bleed by Wung Pan"
     content="Image masking with code and AI"
@@ -19,32 +18,50 @@
   <meta name="twitter:image" content="https://23-2-dsdn242.github.io/mddn-242-data-mapping-panwung/preview.jpg" />
 
   <style>
+    a {
+      color: rgb(147, 128, 216);
+    }
     body {
-      background-color:rgb(0, 0, 0);
+      background-color: rgb(0, 0, 0);
+    }
+    table {
+      padding: auto;
+      margin: auto;
+      border-collapse: separate; 
+      border-spacing: 1em;
     }
     th {
-      color:rgb(255, 255, 255);
-    }
-    a {
-      color:rgb(147, 128, 216);
+      color: rgb(255, 255, 255);
     }
   </style>
 </head>
 <body>
-    <table>
-        <tr>
-        <th>Training</th>
-        <td><a href="output_1.png"><img height="256" width="480" src="output_1.png"></a></td>
-        <td><a href="output_2.png"><img height="256" width="480" src="output_2.png"></a></td>
-        <td><a href="output_3.png"><img height="256" width="480" src="output_3.png"></a></td>
-        </tr>
+  <table>
+    <tr>
+      <th></th>
+      <th>Training</th>
+    </tr>
 
-        <tr>
-        <th>Testing</th>
-        <td><a href="output_4.png"><img height="256" width="480" src="output_4.png"></a></td>
-        <td><a href="output_5.png"><img height="256" width="480" src="output_5.png"></a></td>
-        <td><a href="output_6.png"><img height="256" width="480" src="output_6.png"></a></td>
-        </tr>
-    </table>
-    <a href="render.html">render program</a>
+    <tr>
+      <td><a href="output_1.png"><img height="256" width="480" src="output_1.png"></a></td>
+      <td><a href="output_2.png"><img height="256" width="480" src="output_2.png"></a></td>
+      <td><a href="output_3.png"><img height="256" width="480" src="output_3.png"></a></td>
+    </tr>
+
+    <tr>
+      <th></th>
+      <th>Testing</th>
+    </tr>
+
+    <tr>
+      <td><a href="output_4.png"><img height="256" width="480" src="output_4.png"></a></td>
+      <td><a href="output_5.png"><img height="256" width="480" src="output_5.png"></a></td>
+      <td><a href="output_6.png"><img height="256" width="480" src="output_6.png"></a></td>
+    </tr>
+
+    <tr>
+      <th></th>
+      <th><a href="render.html">render program</a></th>
+    </tr>
+  </table>  
 </body>
