--- a/render.html
+++ b/render.html
@@ -1,11 +1,22 @@
 <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
-    <script src="z_hsluv-0.0.3.min.js"  type="text/javascript"></script>
-    <script language="javascript" type="text/javascript" src="z_purview_helper.js"></script>
-    <script language="javascript" type="text/javascript" src="z_color_helper.js"></script>
-    <script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
+  <script src="z_hsluv-0.0.3.min.js"  type="text/javascript"></script>
+  <script language="javascript" type="text/javascript" src="z_purview_helper.js"></script>
+  <script language="javascript" type="text/javascript" src="z_color_helper.js"></script>
+  <script language="javascript" type="text/javascript" src="sketch.js"></script>
+
+  <style>
+    a {
+      color: rgb(147, 128, 216);
+    }
+    body {
+      background-color: rgb(0, 0, 0);
+      text-align: center;
+    }
+  </style>
+
 </head>
-<body style="background-color:white">
-<div id="canvasContainer"></div>
-<a href="index.html">Submitted work</a>
+  <body>
+  <div id="canvasContainer"></div>
+  <p><a href="index.html">Submitted work</a></p>
 </body>
